Don't crash browser process when OK passed as error code in FSP API.

This CL fixes it by adding a guard to both custom bindings, and
API implementation.

TEST=Tested with a testing extension.
BUG=682556

Review-Url: https://codereview.chromium.org/2643013002
Cr-Commit-Position: refs/heads/master@{#451711}

Former-commit-id: 0891c24ebc475fb9b92c1d31a7e8d8e49a7de065